--- a/Codigos/Análise de BCI/AutoencoderFeatureExtraction.ipynb
+++ b/Codigos/Análise de BCI/AutoencoderFeatureExtraction.ipynb
@@ -2,47 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# %run \"Scripts/dataprep.py\"\n",
+    "import sys\n",
+    "sys.path.append('C:\\\\Users\\\\Patrick\\\\Documents\\\\GitHub\\\\ICDeepLearning\\\\Scripts')\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "import sys\n",
-    "sys.path.append('Scripts')\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import torch.nn.functional as F\n",
-    "from torchvision import transforms, utils, models\n",
+    "from torchvision import transforms, utils, datasets, models\n",
     "from torch.utils.data import Dataset, DataLoader\n",
+    "from torch.utils.data.sampler import SubsetRandomSampler\n",
     "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "plt.style.use('ggplot')\n",
     "import numpy as np\n",
     "\n",
-    "from utils import *\n",
+    "from utils import path\n",
+    "from DataVis import createInputFigure\n",
+    "from NNUtils import *\n",
+    "from NNCreationAux import *\n",
     "from SSVEPDataset import SSVEPDataset\n",
-    "from classes import *\n",
     "from SSVEPDataloader import *\n",
     "\n",
     "from sklearn import preprocessing\n",
     "import os\n",
     "import time\n",
-    "import copy\n",
-    "from functools import partial\n",
-    "\n",
+    "import copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def read_data(dataframe):\n",
     "    return torch.tensor(pd.read_csv(dataframe['path'], sep = ' ', header = None, dtype = float).values)\n",
     "\n",
@@ -56,14 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,153 +64,12 @@
     "data = pd.read_csv('SSVEPDataset_'+dataType+'.csv')\n",
     "dataset = SSVEPDataset(data)\n",
     "\n",
-    "batchSize = 4\n",
+    "batchSize = 64\n",
     "dataloaders, datasetsSizes = SSVEPDataloaders(dataset, batchSize)\n",
     "# example = next(iter(dataloaders['train']))['series']\n",
     "\n",
     "device = torch.device(\"cuda:0\" if (torch.cuda.is_available()) else \"cpu\")\n",
     "# device = 'cpu'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ** Training algorithms\n",
-    "\n",
-    "def train(model, dataloaders, criterion, optimizer, scheduler, device,\n",
-    "          num_epochs = 25, learningRate = 1e-2, temp = 0):\n",
-    "    since = time.time()\n",
-    "    bestModel = copy.deepcopy(model.state_dict())\n",
-    "    bestLoss = np.inf\n",
-    "    \n",
-    "    trainLoss = []\n",
-    "    validLoss = []\n",
-    "    \n",
-    "    for epoch in range(num_epochs):\n",
-    "        print('Epoch {}/{}'.format(epoch, num_epochs - 1))\n",
-    "        print('-' * 10)\n",
-    "        \n",
-    "        # Each epoch has a training and a validation phase\n",
-    "        for phase in ['train', 'val']:\n",
-    "            if phase == 'train':\n",
-    "                model.train()\n",
-    "            else:\n",
-    "                model.eval()\n",
-    "                \n",
-    "            runningLoss = 0.0\n",
-    "            runningCorrects = 0\n",
-    "            \n",
-    "            for sample in dataloaders[phase]:\n",
-    "                inputs = sample['series'].to(device)\n",
-    "                labels = sample['class'].to(device)\n",
-    "                \n",
-    "                optimizer.zero_grad()\n",
-    "                \n",
-    "                with torch.set_grad_enabled(phase == 'train'):\n",
-    "                    outputs = model(inputs)\n",
-    "                    if temp == 0:\n",
-    "                        loss = criterion(outputs, inputs)\n",
-    "                    else:\n",
-    "                        loss = criterion(outputs, labels)\n",
-    "                    \n",
-    "                    \n",
-    "                    if phase == 'train':\n",
-    "                        loss.backward()\n",
-    "                        optimizer.step()\n",
-    "                        \n",
-    "                runningLoss += loss.item() * inputs.size(0)\n",
-    "                del(inputs); del(labels)\n",
-    "                \n",
-    "            if phase == 'train':\n",
-    "                scheduler.step()\n",
-    "                \n",
-    "            epochLoss = runningLoss/datasetsSizes[phase]\n",
-    "            \n",
-    "            if phase == 'train':\n",
-    "                trainLoss.append(epochLoss)\n",
-    "            else:\n",
-    "                validLoss.append(epochLoss)\n",
-    "            \n",
-    "            print('{} Loss: {:.4f}'.format(phase, epochLoss))\n",
-    "            \n",
-    "            if phase == 'val' and epochLoss < bestLoss:\n",
-    "                bestLoss = epochLoss\n",
-    "                bestModel = copy.deepcopy(model.state_dict())\n",
-    "                \n",
-    "        print()\n",
-    "        \n",
-    "    time_elapsed = time.time() - since\n",
-    "    print('Training complete in {:.0f}m {:.0f}s'.format(time_elapsed // 60, time_elapsed % 60))\n",
-    "    print('Best val Loss: {:4f}'.format(bestLoss))\n",
-    "    \n",
-    "    model.load_state_dict(bestModel)\n",
-    "    return model, [trainLoss, validLoss], bestLoss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Autoencoder(nn.Module):\n",
-    "    def __init__(self,):\n",
-    "        super(Autoencoder, self).__init__()\n",
-    "        \n",
-    "        self.encoder = nn.Sequential(\n",
-    "            ConvBlock(1, 16, kernel_size = (257, 1))\n",
-    "        )\n",
-    "        self.decoder = nn.Sequential(\n",
-    "            DeconvBlock(16, 1, kernel_size = (257, 1))\n",
-    "        )\n",
-    "        \n",
-    "    def forward(self, X):\n",
-    "        X = self.encoder(X)\n",
-    "        X = self.decoder(X)\n",
-    "        return X\n",
-    "\n",
-    "# class Classifier(nn.Module):\n",
-    "#     def __init__(self):\n",
-    "#         super(Classifier, self).__init__()\n",
-    "#         self.Conv1 = ConvBlock(3, 16, kernel_size = 57)\n",
-    "#         self.Linear1 = nn.Linear(16*200*200, 100)\n",
-    "#         self.Linear2 = nn.Linear(100, 5)\n",
-    "        \n",
-    "#     def forward(self, X):\n",
-    "#         X = self.Conv1(X)\n",
-    "#         X = X.view((4, -1))\n",
-    "#         X = self.Linear1(X)\n",
-    "#         X = self.Linear2(X)\n",
-    "#         return X\n",
-    "    \n",
-    "class MergedModel(nn.Module):\n",
-    "    def __init__(self, Encoder, Classifier):\n",
-    "        super(MergedModel, self).__init__()\n",
-    "        self.Encoder = Encoder\n",
-    "        self.Classifier = Classifier\n",
-    "        \n",
-    "#         self.Encoder = ConvBlock(1, 16, kernel_size = (257, 1)) # out 256x16\n",
-    "#         self.Intermid1 = nn.Conv2d(16, 3, kernel_size = 11, padding = 11//2) # reshape -> 1x256x256 ; out 3x256x256\n",
-    "        \n",
-    "#         self.Intermid2 = ConvBlock(3, 16, kernel_size = 57)\n",
-    "#         self.Classifier = nn.Linear(8*40*40, 5)\n",
-    "#         self.Pool = nn.MaxPool2d(2)\n",
-    "        \n",
-    "    def forward(self, X):\n",
-    "        X = self.Encoder(X)\n",
-    "        X = X.reshape(4, 1, 256, 256)\n",
-    "        X = self.Intermid1(X)\n",
-    "        X = self.Intermid2(X)\n",
-    "        X = self.Pool(X)\n",
-    "        X = self.Pool(X)\n",
-    "        X = X.view((4, -1))\n",
-    "        X = self.Classifier(X)\n",
-    "        return X    \n",
-    "\n",
-    "# Autoencoder = Autoencoder().double().to(device)"
    ]
   },
   {
@@ -258,37 +110,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "461.5"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(dataset)/4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = MergedModel().double().to(device)\n",
-    "optimizer = optim.Adam(model.parameters(), lr = 0.001)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size = 7, gamma = 0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -312,136 +133,6 @@
    "metadata": {},
    "source": [
     "***"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "80"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ConvArithSelect('R5', i = 100, k = 21, s = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "436"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ConvArithSelect('R5', i = 512, k = 77, s = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n = 13"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Directory Models\\Autoencoders\\ImageGeneration loaded successfully.\n",
-      "Epoch 0/9\n",
-      "----------\n",
-      "train Loss: 0.0801\n",
-      "val Loss: 0.0365\n",
-      "\n",
-      "Epoch 1/9\n",
-      "----------\n",
-      "train Loss: 0.0367\n",
-      "val Loss: 0.0363\n",
-      "\n",
-      "Epoch 2/9\n",
-      "----------\n",
-      "train Loss: 0.0346\n",
-      "val Loss: 0.0319\n",
-      "\n",
-      "Epoch 3/9\n",
-      "----------\n",
-      "train Loss: 0.0288\n",
-      "val Loss: 0.0267\n",
-      "\n",
-      "Epoch 4/9\n",
-      "----------\n",
-      "train Loss: 0.0271\n",
-      "val Loss: 0.0259\n",
-      "\n",
-      "Epoch 5/9\n",
-      "----------\n",
-      "train Loss: 0.0266\n",
-      "val Loss: 0.0255\n",
-      "\n",
-      "Epoch 6/9\n",
-      "----------\n",
-      "train Loss: 0.0241\n",
-      "val Loss: 0.0238\n",
-      "\n",
-      "Epoch 7/9\n",
-      "----------\n",
-      "train Loss: 0.0232\n",
-      "val Loss: 0.0237\n",
-      "\n",
-      "Epoch 8/9\n",
-      "----------\n",
-      "train Loss: 0.0233\n",
-      "val Loss: 0.0234\n",
-      "\n",
-      "Epoch 9/9\n",
-      "----------\n",
-      "train Loss: 0.0230\n",
-      "val Loss: 0.0235\n",
-      "\n",
-      "Training complete in 14m 32s\n",
-      "Best val Loss: 0.023418\n"
-     ]
-    }
-   ],
-   "source": [
-    "n = n + 1\n",
-    "modelPath = path('Models\\\\Autoencoders\\\\ImageGeneration')\n",
-    "modelName = 'Autoencoder'+str(n)\n",
-    "file = open(modelPath/modelName+\".txt\", 'w')\n",
-    "\n",
-    "model, stats, bestLoss = train(model, dataloaders, criterion, optimizer, scheduler, device,\n",
-    "                         num_epochs = 10)\n",
-    "\n",
-    "file.write(str(model)+\"\\n\\n\")\n",
-    "file.write(\"Best Val Loss:{}\\n\\n\".format(bestLoss))\n",
-    "file.write(\"Training Loss: {}\\n\\n\".format(stats[0]))\n",
-    "file.write(\"Validation Loss: {}\\n\\n\".format(stats[1]))\n",
-    "file.close()"
    ]
   }
  ],
