Autoencoder + Pure Retraining

--- a/Codigos/Análise de BCI/SSVEP_Classification.ipynb
+++ b/Codigos/Análise de BCI/SSVEP_Classification.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('C:\\\\Users\\\\Patrick\\\\Documents\\\\GitHub\\\\ICDeepLearning\\\\Scripts')\n",
@@ -139,7 +148,12 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -878,29 +892,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "256"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train': 8716, 'val': 2178}\n"
+     ]
     }
    ],
-   "source": [
-    "int(dataType)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "dataType = '128'\n",
     "data = pd.read_csv('SSVEPDataset_'+dataType+'.csv')\n",
@@ -911,32 +913,13 @@
     "# example = next(iter(dataloaders['train']))['series']\n",
     "\n",
     "device = torch.device(\"cuda:0\" if (torch.cuda.is_available()) else \"cpu\")\n",
-    "# device = 'cpu'"
+    "# device = 'cpu'\n",
+    "print(datasetsSizes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'train': 8716, 'val': 2178}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "datasetsSizes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,9 +935,147 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 0\n",
+      "--\n",
+      "Epoch 1/25\n",
+      "-----\n",
+      "Stage: train\n",
+      "Loss: 1.7669 - Accuracy: 0.2140\n",
+      "Stage: val\n",
+      "Loss: 1.6186 - Accuracy: 0.2203\n",
+      "--\n",
+      "Epoch 2/25\n",
+      "-----\n",
+      "Stage: train\n",
+      "Loss: 1.6771 - Accuracy: 0.2185\n",
+      "Stage: val\n",
+      "Loss: 1.6174 - Accuracy: 0.2474\n",
+      "--\n",
+      "Epoch 3/25\n",
+      "-----\n",
+      "Stage: train\n",
+      "Loss: 1.6642 - Accuracy: 0.2154\n",
+      "Stage: val\n",
+      "Loss: 1.6376 - Accuracy: 0.2001\n",
+      "--\n",
+      "Epoch 4/25\n",
+      "-----\n",
+      "Stage: train\n",
+      "Loss: 1.6591 - Accuracy: 0.2073\n",
+      "Stage: val\n",
+      "Loss: 1.7865 - Accuracy: 0.2313\n",
+      "--\n",
+      "Epoch 5/25\n",
+      "-----\n",
+      "Stage: train\n",
+      "Loss: 1.6449 - Accuracy: 0.2165\n",
+      "Stage: val\n",
+      "Loss: 1.7841 - Accuracy: 0.2116\n",
+      "--\n",
+      "Epoch 6/25\n",
+      "-----\n",
+      "Stage: train\n",
+      "Loss: 1.6414 - Accuracy: 0.2193\n",
+      "Stage: val\n",
+      "Loss: 1.6316 - Accuracy: 0.2432\n",
+      "--\n",
+      "Epoch 7/25\n",
+      "-----\n",
+      "Stage: train\n",
+      "Loss: 1.6350 - Accuracy: 0.2263\n",
+      "Stage: val\n",
+      "Loss: 1.7066 - Accuracy: 0.2437\n",
+      "--\n",
+      "Epoch 8/25\n",
+      "-----\n",
+      "Stage: train\n",
+      "Loss: 1.6429 - Accuracy: 0.2174\n",
+      "Stage: val\n",
+      "Loss: 1.6712 - Accuracy: 0.2331\n",
+      "--\n",
+      "Epoch 9/25\n",
+      "-----\n",
+      "Stage: train\n",
+      "Loss: 1.6379 - Accuracy: 0.2189\n",
+      "Stage: val\n",
+      "Loss: 1.6414 - Accuracy: 0.1955\n",
+      "--\n",
+      "Epoch 10/25\n",
+      "-----\n",
+      "Stage: train\n",
+      "Loss: 1.6329 - Accuracy: 0.2225\n",
+      "Stage: val\n",
+      "Loss: 1.6899 - Accuracy: 0.2249\n",
+      "--\n",
+      "Epoch 11/25\n",
+      "-----\n",
+      "Stage: train\n",
+      "Loss: 1.6307 - Accuracy: 0.2127\n",
+      "Stage: val\n",
+      "Loss: 1.5874 - Accuracy: 0.2538\n",
+      "--\n",
+      "Epoch 12/25\n",
+      "-----\n",
+      "Stage: train\n",
+      "Loss: 1.6217 - Accuracy: 0.2264\n",
+      "Stage: val\n",
+      "Loss: 1.6161 - Accuracy: 0.2308\n",
+      "--\n",
+      "Epoch 13/25\n",
+      "-----\n",
+      "Stage: train\n",
+      "Loss: 1.6214 - Accuracy: 0.2240\n",
+      "Stage: val\n",
+      "Loss: 1.6626 - Accuracy: 0.2226\n",
+      "--\n",
+      "Epoch 14/25\n",
+      "-----\n",
+      "Stage: train\n",
+      "Loss: 1.6161 - Accuracy: 0.2330\n",
+      "Stage: val\n",
+      "Loss: 1.6137 - Accuracy: 0.2051\n",
+      "--\n",
+      "Epoch 15/25\n",
+      "-----\n",
+      "Stage: train\n",
+      "Loss: 1.6068 - Accuracy: 0.2342\n",
+      "Stage: val\n",
+      "Loss: 1.6065 - Accuracy: 0.2377\n",
+      "--\n",
+      "Epoch 16/25\n",
+      "-----\n",
+      "Stage: train\n",
+      "Loss: 1.6154 - Accuracy: 0.2314\n",
+      "Stage: val\n",
+      "Loss: 1.6215 - Accuracy: 0.2024\n",
+      "--\n",
+      "Epoch 17/25\n",
+      "-----\n",
+      "Stage: train\n",
+      "Loss: 1.6210 - Accuracy: 0.2171\n",
+      "Stage: val\n",
+      "Loss: 2.1715 - Accuracy: 0.2129\n",
+      "--\n",
+      "Epoch 18/25\n",
+      "-----\n",
+      "Stage: train\n",
+      "Loss: 1.6134 - Accuracy: 0.2260\n",
+      "Stage: val\n",
+      "Loss: 1.6520 - Accuracy: 0.2285\n",
+      "--\n",
+      "Epoch 19/25\n",
+      "-----\n",
+      "Stage: train\n"
+     ]
+    }
+   ],
    "source": [
-    "model, _, _ = kfold_train(model, dataset, criterion, optimizer, num_epochs = 20, num_folds = 5)"
+    "model, _, _ = kfold_train(model, dataset, criterion, optimizer, num_epochs = 25, num_folds = 5)"
    ]
   },
   {
