cca tsinghua começando

--- a/3 - Time Series Imaging.ipynb
+++ b/3 - Time Series Imaging.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,35 +158,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Summation\n",
-    "gasf = GramianAngularField(image_size = 256, method = 'summation')\n",
+    "gasf = GramianAngularField(image_size = 512, method = 'summation')\n",
     "method = 'gasf'\n",
     "fig_path = Project.images_dir / preprocessing / method / signal_length"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2730"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Fields.createField(gasf, data, range(,), figSize, fig_path, signal_length, preprocessing, Project)"
+    "len(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Difference\n",
-    "gadf = GramianAngularField(image_size = 256, method = 'difference')\n",
-    "method = 'gadf'\n",
-    "fig_path = Project.images_dir / preprocessing / method / signal_length"
+    "Fields.createField(gasf, data, range(2000,2730), figSize, fig_path, signal_length, preprocessing, Project)"
    ]
   },
   {
@@ -186,7 +203,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Fields.createField(gadf, data, range(1500,2730), figSize, fig_path, signal_length, preprocessing, Project)"
+    "# Difference\n",
+    "gadf = GramianAngularField(image_size = 512, method = 'difference')\n",
+    "method = 'gadf'\n",
+    "fig_path = Project.images_dir / preprocessing / method / signal_length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Fields.createField(gadf, data, range(2000,2730), figSize, fig_path, signal_length, preprocessing, Project)"
    ]
   },
   {
@@ -270,22 +299,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mtf = MarkovTransitionField(image_size = 256)\n",
+    "mtf = MarkovTransitionField(image_size = 512)\n",
     "method = 'mtf'\n",
     "fig_path = Project.images_dir / preprocessing / method / signal_length"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Fields.createField(mtf, data, range(,), figSize, fig_path, signal_length, preprocessing, Project)"
+    "Fields.createField(mtf, data, range(2000,2730), figSize, fig_path, signal_length, preprocessing, Project)"
    ]
   },
   {
@@ -371,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,16 +412,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2730"
+       "10894"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,19 +432,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Fields.createField(rp, data, range(0,1000), figSize, fig_path, signal_length, preprocessing, Project, cmap = cmap)"
+    "Fields.createField(rp, data, range(10000, 10894), figSize, fig_path, signal_length, preprocessing, Project, cmap = cmap)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -434,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
