--- a/2 - Combination of Time Series.ipynb
+++ b/2 - Combination of Time Series.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,9 +18,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "signal_length = '512'\n",
-    "LinearCombination.combine(Project, signal_length, electrodes = ['Oz', 'Cz'])"
+    "signal_length = '1280'\n",
+    "# electrodes = ['Oz', 'Cz']\n",
+    "LinearCombination.combine(Project, signal_length)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -39,7 +47,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
