--- a/3 - Time Series Imaging.ipynb
+++ b/3 - Time Series Imaging.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -38,12 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# GENERAL PARAMETERS\n",
-    "signal_length = '512'\n",
+    "signal_length = '128'\n",
     "preprocessing = 'cca'\n",
     "data = pd.read_csv((Project.output_dir/('SSVEPDataset_'+signal_length+'.csv')).__str__(), dtype = 'str')\n",
     "indexes = list(data.index)\n",
@@ -158,28 +149,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Summation\n",
-    "gasf = GramianAngularField(image_size = 512, method = 'summation')\n",
+    "gasf = GramianAngularField(image_size = 256, method = 'summation')\n",
     "method = 'gasf'\n",
     "fig_path = Project.images_dir / preprocessing / method / signal_length"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2730"
+       "5460"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,32 +181,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Fields.createField(gasf, data, range(2000,2730), figSize, fig_path, signal_length, preprocessing, Project)"
+    "Fields.createField(gasf, data, range(4500,5460), figSize, fig_path, signal_length, preprocessing, Project)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Difference\n",
-    "gadf = GramianAngularField(image_size = 512, method = 'difference')\n",
+    "gadf = GramianAngularField(image_size = 256, method = 'difference')\n",
     "method = 'gadf'\n",
     "fig_path = Project.images_dir / preprocessing / method / signal_length"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Fields.createField(gadf, data, range(2000,2730), figSize, fig_path, signal_length, preprocessing, Project)"
+    "Fields.createField(gadf, data, range(4500,5460), figSize, fig_path, signal_length, preprocessing, Project)"
    ]
   },
   {
@@ -299,22 +290,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mtf = MarkovTransitionField(image_size = 512)\n",
+    "mtf = MarkovTransitionField(image_size = 256)\n",
     "method = 'mtf'\n",
     "fig_path = Project.images_dir / preprocessing / method / signal_length"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5460"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Fields.createField(mtf, data, range(2000,2730), figSize, fig_path, signal_length, preprocessing, Project)"
+    "Fields.createField(mtf, data, range(4500,5460), figSize, fig_path, signal_length, preprocessing, Project)"
    ]
   },
   {
@@ -400,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +432,7 @@
        "10894"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,12 +443,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Fields.createField(rp, data, range(10000, 10894), figSize, fig_path, signal_length, preprocessing, Project, cmap = cmap)"
+    "Fields.createField(rp, data, range(0, 500), figSize, fig_path, signal_length, preprocessing, Project, cmap = cmap)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -456,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
