--- a/4 - SSVEP Classification.ipynb
+++ b/4 - SSVEP Classification.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,29 +64,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "preprocessing = 'cca'\n",
-    "signal_length = '512'\n",
+    "signal_length = '256'\n",
     "fig_type = 'rp'\n",
     "dataloaders, dataset_sizes = get_image_dataloaders(Project, preprocessing, signal_length, fig_type, batch_size = 16)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_type = 'resnet'; model_size = '50'; num_classes = 5; model_name = model_type + model_size\n",
-    "model = model_selection(model_name, num_classes, pretrained = False).to(device)"
+    "model = model_selection(model_name, num_classes, pretrained = True).to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,11 +97,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model, stats = train(Project, model, dataloaders, dataset_sizes, criterion, optimizer, scheduler, num_epochs = 15)"
+    "model, stats = train(Project, model, dataloaders, dataset_sizes, criterion, optimizer, scheduler, num_epochs = 50)"
    ]
   },
   {
@@ -120,19 +120,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "preprocessing = 'cca'\n",
-    "signal_length = '1280'\n",
+    "signal_length = '256'\n",
     "fig_type = 'rp'\n",
-    "dataset = get_image_dataset(Project, preprocessing, signal_length, fig_type)"
+    "dataset = get_image_dataset(Project, preprocessing, signal_length, fig_type, image_size = 300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,11 +153,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model, stats = kfold_train(Project, model, dataset, criterion, optimizer, num_epochs = 30, num_folds = 5, batch_size = 16)"
+    "model, stats = kfold_train(Project, model, dataset, criterion, optimizer, num_epochs = 50, num_folds = 5, batch_size = 8)"
    ]
   },
   {
@@ -176,21 +176,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "preprocessing = 'cca'\n",
-    "signal_length = '512'\n",
+    "signal_length = '128'\n",
     "data = pd.read_csv((Project.output_dir / ('SSVEPDataset_'+signal_length+'.csv')).__str__(), dtype = 'str')\n",
     "dataset = SSVEPDataset(Project, preprocessing, data, signal_length)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train': 8716, 'val': 2178}\n"
+     ]
+    }
+   ],
    "source": [
     "batch_size = 64\n",
     "dataloaders, dataset_sizes = SSVEPDataloader(dataset, batch_size)\n",
@@ -199,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,11 +230,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model, stats = kfold_train(Project, model, dataset, criterion, optimizer, num_epochs = 20, num_folds = 5)"
+    "model, stats = kfold_train(Project, model, dataset, criterion, optimizer, num_epochs = 50, num_folds = 5, batch_size = batch_size)"
    ]
   }
  ],
