--- a/3 - Time Series Imaging.ipynb
+++ b/3 - Time Series Imaging.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "# GENERAL PARAMETERS\n",
-    "signal_length = '128'\n",
+    "signal_length = '512'\n",
     "preprocessing = 'cca'\n",
     "data = pd.read_csv((Project.output_dir/('SSVEPDataset_'+signal_length+'.csv')).__str__(), dtype = 'str')\n",
     "indexes = list(data.index)\n",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,16 +161,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5460"
+       "2730"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,16 +181,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Fields.createField(gasf, data, range(4500,5460), figSize, fig_path, signal_length, preprocessing, Project)"
+    "Fields.createField(gasf, data, range(2000,2730), figSize, fig_path, signal_length, preprocessing, Project)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,11 +202,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Fields.createField(gadf, data, range(4500,5460), figSize, fig_path, signal_length, preprocessing, Project)"
+    "Fields.createField(gadf, data, range(2000, 2730), figSize, fig_path, signal_length, preprocessing, Project)"
    ]
   },
   {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,16 +301,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5460"
+       "2730"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,11 +321,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Fields.createField(mtf, data, range(4500,5460), figSize, fig_path, signal_length, preprocessing, Project)"
+    "Fields.createField(mtf, data, range(2000,2730), figSize, fig_path, signal_length, preprocessing, Project)"
    ]
   },
   {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
        "10894"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,11 +443,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Fields.createField(rp, data, range(0, 500), figSize, fig_path, signal_length, preprocessing, Project, cmap = cmap)"
+    "Fields.createField(rp, data, range(10000, 10894), figSize, fig_path, signal_length, preprocessing, Project, cmap = cmap)"
    ]
   },
   {
