--- a/1 - Data Extraction.ipynb
+++ b/1 - Data Extraction.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Scripts.data import SplitDataset\n",
+    "from Scripts.datahandling import SplitDataset\n",
     "\n",
     "SplitDataset.load(split_length, raw_data_path, output_path)"
    ]
