--- a/2 - Combination of Time Series.ipynb
+++ b/2 - Combination of Time Series.ipynb
@@ -9,7 +9,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "from Project import Project\n",
-    "from Scripts.data import LinearCombination"
+    "from Scripts.datahandling import LinearCombination"
    ]
   },
   {
