--- a/3 - Time Series Imaging.ipynb
+++ b/3 - Time Series Imaging.ipynb
@@ -17,7 +17,7 @@
     "from mpl_toolkits.axes_grid1 import ImageGrid\n",
     "from PIL import Image\n",
     "from pyts.image import GramianAngularField, MarkovTransitionField, RecurrencePlot\n",
-    "from Scripts.data import Fields"
+    "from Scripts.datahandling import Fields"
    ]
   },
   {
